force-app/main/default/objects/Grade__c/Grade__c.object-meta.xml
<CustomObject>
    <label>Grade</label>
    <nameField>
        <displayFormat>GRD-{0000}</displayFormat>
        <label>Grade Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grades</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>