force-app/main/default/objects/Grade__c/fields/Grade_Date__c.field-meta.xml
<CustomField>
    <fullName>Grade_Date__c</fullName>
    <label>Grade_Date</label>
    <type>Date</type>
</CustomField>