force-app/main/default/objects/Grade__c/fields/Max_Marks__c.field-meta.xml
<CustomField>
    <fullName>Max_Marks__c</fullName>
    <label>Max_Marks</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>