force-app/main/default/objects/Grade__c/fields/Teacher__c.field-meta.xml
<CustomField>
    <fullName>Teacher__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Teacher</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Grades</relationshipName>
    <type>Lookup</type>
</CustomField>