force-app/main/default/objects/Grade__c/validationRules/Marks_Not_Exceed_Max.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks_Not_Exceed_Max</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  NOT(ISBLANK( Marks__c )),
  NOT(ISBLANK( Max_Marks__c )),
   Marks__c &gt;  Max_Marks__c 
)</errorConditionFormula>
    <errorDisplayField>Marks__c</errorDisplayField>
    <errorMessage>Marks Obtained cannot exceed Assignment Maximum Marks</errorMessage>
</ValidationRule>