force-app/main/default/objects/Grade__c/validationRules/Marks_Not_Negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Marks_Not_Negative</fullName>
    <active>true</active>
    <errorConditionFormula>Marks__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Marks__c</errorDisplayField>
    <errorMessage>Marks cannot be negative</errorMessage>
</ValidationRule>